--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="index.html"><img src="1.jpg" alt="" height=35px width=35px/></a>
+            <a class="navbar-brand" href="index.html"><img src="/resources/1.jpg" alt="" height=35px width=35px/></a>
 
           </div>
           <ul class="nav navbar-nav">
