--- a/views/help.ejs
+++ b/views/help.ejs
@@ -2,25 +2,12 @@
 
 <head>
     <title>Help page</title>
-
- 
-    <link href="bootstrap.min.css" rel="stylesheet">
-	<link href="style1.css" rel="stylesheet">
+    <% include ./includes/head.ejs %>
 </head>
 
 <body>
 <!--/navigation-bars to know more about the company, contact details, cart of the user and the product details of the selected product-->   
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="index.html"><img src="images/logo.jpg" alt="" /></a>
-          </div>
-          <ul class="nav navbar-nav">
-            <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="about1.html">About US</a></li>
-          </ul>
-        </div>
-      </nav>
+    <% include ./includes/nav.ejs %>
 
 	  <div id="contact-page" class="container">
     	<p>
@@ -29,7 +16,7 @@
     	</div>	
     </div>
     <script src="jquery.js"></script>
-    <script src="bootstrap.min.js"></script>
+    <script src="../resources/bootstrap.min.js"></script>
 </body>
 
 </html>
