--- a/views/about.ejs
+++ b/views/about.ejs
@@ -3,12 +3,12 @@
 <head>
     <title>Home page</title>
 
- <% include ./includes/head.ejs %>
+ <%- include('includes/head.ejs') %>
 </head>
 
 <body>
 <!--/navigation-bars to know more about the company, contact details, cart of the user and the product details of the selected product-->   
-    <% include ./includes/nav.ejs %>
+    <%- include('includes/nav.ejs') %>
 
 	  <div id="contact-page" class="container">
     	<div class="bg">
