--- a/views/help.ejs
+++ b/views/help.ejs
@@ -2,12 +2,12 @@
 
 <head>
     <title>Help page</title>
-    <% include ./includes/head.ejs %>
+    <%- include('includes/head.ejs') %>
 </head>
 
 <body>
 <!--/navigation-bars to know more about the company, contact details, cart of the user and the product details of the selected product-->   
-    <% include ./includes/nav.ejs %>
+    <%- include('includes/nav.ejs') %>
 
 	  <div id="contact-page" class="container">
     	<p>
