--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,13 +2,13 @@
 <!--/Product Details page-->  
 <head>
     <title>Smart Boss</title> 
-    <% include ./includes/head.ejs %>
+    <%- include('includes/head.ejs') %>
 
 </head>
 <!--/body-->    
 <body>
 <!--/navigation-bars to know more about the company, contact details, cart of the user and the product details of the selected product-->   
-    <% include ./includes/nav.ejs %>    
+    <%- include('includes/nav.ejs') %>    
 
     <main>
         <section id="login">
