--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,7 @@
     <main>
         <section id="login">
             <h1>Login</h1>
+            <form action='/employer'>
             <div>
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required></br>
@@ -24,8 +25,9 @@
             <div>
                 <button type="submit">Login</button></br>
             </div>
+            </form>
             <div>
-                <a href="signup.html">New? Sign up here</a>
+                <a href='/employee'>New? Sign up here</a>
             </div>
         </section>
     </main>
