--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
     <main>
         <section id="login">
             <h1>Login</h1>
-            <form action='/employer'>
+            <form action='/employee'>
             <div>
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required></br>
@@ -27,7 +27,7 @@
             </div>
             </form>
             <div>
-                <a href='/employee'>New? Sign up here</a>
+                <a href='/employer'>New? Sign up here</a>
             </div>
         </section>
     </main>
