--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
             <form action='/employee'>
             <div>
                 <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required></br>
+                <input type="text" id="uname" name="uname" required></br>
             </div>
             <div>
                 <label for="pass">Password:</label>
