--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 <head>
     <title>Smart Boss</title> 
     <%- include('includes/head.ejs') %>
+       
 
 </head>
 <!--/body-->    
@@ -13,6 +14,7 @@
     <main>
         <section id="login">
             <h1>Login</h1>
+            <h4><%= data %></h4>
             <form action='/employee'>
             <div>
                 <label for="username">Username:</label>
