created signup page
made the signup page and started working on the signup logic for that page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
             </div>
             </form>
             <div>
-                <a href='/employer'>New? Sign up here</a>
+                <a href='/signup'>New? Sign up here</a>
             </div>
         </section>
     </main>
