--- a/views/employee.html
+++ b/views/employee.html
@@ -14,20 +14,34 @@
         <section id="availability">
             <h1>Input your availability</h1>
             <form action="asdf">
-                <label for="monday">Monday:</label>
-                <input type="text" id="monday" name="monday" required></br>
-                <label for="tuesday">Tuesday:</label>
-                <input type="text" id="tuesday" name="tuesday" required></br>
-                <label for="wednesday">Wednesday:</label>
-                <input type="text" id="wednesday" name="wednesday" required></br>
-                <label for="thursday">Thursday:</label>
-                <input type="text" id="thursday" name="thursday" required></br>
-                <label for="friday">Friday:</label>
-                <input type="text" id="friday" name="friday" required></br>
-                <label for="saturday">Saturday:</label>
-                <input type="text" id="saturday" name="saturday" required></br>
-                <label for="sunday">Sunday:</label>
-                <input type="text" id="sunday" name="sunday" required></br>
+                <label for="monday">
+                    <span>Monday:</span>
+                    <input type="text" id="monday" name="monday" required></br>
+                </label>
+                <label for="tuesday">
+                    Tuesday:
+                    <input type="text" id="tuesday" name="tuesday" required></br>
+                </label>
+                <label for="wednesday">
+                    Wednesday:
+                    <input type="text" id="wednesday" name="wednesday" required></br>
+                </label>
+                <label for="thursday">
+                    Thursday:
+                    <input type="text" id="thursday" name="thursday" required></br>
+                </label>
+                <label for="friday">
+                    Friday:
+                    <input type="text" id="friday" name="friday" required></br>
+                </label>
+                <label for="saturday">
+                    Saturday:
+                    <input type="text" id="saturday" name="saturday" required></br>
+                </label>
+                <label for="sunday">
+                    Sunday:
+                    <input type="text" id="sunday" name="sunday" required></br>
+                </label>
                 <input type="submit" value="Submit">
             </form>
 
