employer registration working, need to fix employer login

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
         <section id="login">
             <h1>Login</h1>
             <h4><%= data %></h4>
-            <form action='/employee'>
+            <form action='/login'>
             <div>
                 <label for="username">Username:</label>
                 <input type="text" id="uname" name="uname" required></br>
@@ -23,6 +23,10 @@
             <div>
                 <label for="pass">Password:</label>
                 <input type="password" id="pass" name="pass"></br>
+            </div>
+            <div>
+                <input type='radio' id="employee" name="logincheck" value="employee" checked> Employee<br>
+                <input type='radio' id="employer" name="logincheck" value="employer"> Employer<br>
             </div>
             <div>
                 <button type="submit">Login</button></br>
