--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -38,7 +38,7 @@
                 </div>
                 <div>
                     <input type='radio' id="employee" name="signupcheck" value="employee" checked> Employee<br>
-                    <input type='radio' id="employer" name="signupcheck" value="employee"> Employer<br>
+                    <input type='radio' id="employer" name="signupcheck" value="employer"> Employer<br>
                 </div>
                 <div>
                     <button type="submit">Signup</button></br>
