lots of refactoring can now login and create users

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,7 +15,7 @@
         <section id="login">
             <h1>Signup</h1>
             <h4><%= data %></h4>
-            <form action='/createnewuser'>
+            <form action='/createnewuser' method='post'>
                 <div>
                     <label for="name">Full Name:</label>
                     <input type="text" id="name" name="name" required></br>
