--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
         <section id="login">
             <h1>Login</h1>
             <h4><%= data %></h4>
-            <form action='/login'>
+            <form action='/login' method='post'>
             <div>
                 <label for="username">Username:</label>
                 <input type="text" id="uname" name="uname" required></br>
