now displays the user's name when viewing their profile

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,6 +11,7 @@
 
         <main>
             <h1>Smart Boss</h1>
+            <h2>Welcome <%- name %></h2>
             <h3>Jobs</h3>
             <% if(numberOfGroups > 0) { %> 
                 <% groups.forEach(function(group) { %>
