Group creation done working on ejs for groups next

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -30,10 +30,10 @@
                     </label>
                 </form>
             <% } else { %>
-                <form action='/employer/createJob'>
+                <form action='/employer/createJob' method='post'>
                     <label for="createGroup">
                         <span>Job Name:</span>
-                        <input type="text" />
+                        <input type="text" id='groupName' name='groupName'/>
                         <button>Create Job</button>
                     </label>
                 </form>
