--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -12,42 +12,44 @@
         <main>
             <h1>Smart Boss</h1>
             <h2>Welcome <%- name %></h2>
-            <br>
+            <br />
             <h3>Jobs</h3>
-            <% if(numberOfGroups > 0) { %> 
+            <% if(numberOfGroups > 0) { %>
+            <form action="/<%= type %>/profile/group">
                 <% groups.forEach(function(group) { %>
-                <a href="/<%= type %>/profile/<%= group.groupName %>"><%= group.groupName %></a>
-            <% }); %> <% } else { %>
-                <span>No Jobs currently please create or add a job</span>
+                    <button value="<%= group._id%>"><%= group.groupName %></button>
+                <% }); %>
+            </form>
+             <% } else { %>
+            <span>No Jobs currently please create or add a job</span>
             <% } %>
             <h3>Add A Job</h3>
             <% if(type == 'employee') { %>
-                <form action="/employee/addJob" method='post'>
-                    <label for="AddGroup">
-                        <span>Job Code:</span>
-                        <input type="text" id='groupId' name='groupId'/>
-                        <button>Add Job</button>
-                    </label>
-                </form>
+            <form action="/employee/addJob" method="post">
+                <label for="AddGroup">
+                    <span>Job Code:</span>
+                    <input type="text" id="groupId" name="groupId" />
+                    <button>Add Job</button>
+                </label>
+            </form>
             <% } else { %>
-                <form action='/employer/createJob' method='post'>
-                    <label for="createGroup">
-                        <span>Job Name:</span>
-                        <input type="text" id='groupName' name='groupName'/>
-                        <button>Create Job</button>
-                    </label>
-                </form>
-            <% } %>
-            <% if(type == 'employee') { %>
-                <form class='dropdown' action='/employee/schedule'>
-                    <label for='mon'>Monday:</label>
-                    <select id='mon'>
-                        <option value=0000>12:00 am</option>
-                        <option value=0030>12:30 am</option>
-                        <option value=0100>1:00 am</option>
-                    </select>
-                    <button type='submit'>Submit Changes</button>
-                </form>
+            <form action="/employer/createJob" method="post">
+                <label for="createGroup">
+                    <span>Job Name:</span>
+                    <input type="text" id="groupName" name="groupName" />
+                    <button>Create Job</button>
+                </label>
+            </form>
+            <% } %> <% if(type == 'employee') { %>
+            <form class="dropdown" action="/employee/schedule">
+                <label for="mon">Monday:</label>
+                <select id="mon">
+                    <option value="0000">12:00 am</option>
+                    <option value="0030">12:30 am</option>
+                    <option value="0100">1:00 am</option>
+                </select>
+                <button type="submit">Submit Changes</button>
+            </form>
             <% } %>
         </main>
         <footer id="footer"></footer>
