employer job page is done

--- a/views/groupPage.ejs
+++ b/views/groupPage.ejs
@@ -11,7 +11,8 @@
 
         <main>
             <h1>Smart Boss</h1>
-            <h2>Welcome <%- name %></h2>
+            <h2><%- name %></h2>
+            <h3>Job Code: <%- jobCode %></h3>
             <br />
             <% if(type == 'employee') { %>
             <div id="full">
