--- a/views/includes/employerLeft.ejs
+++ b/views/includes/employerLeft.ejs
@@ -2,12 +2,11 @@
     <!--/Product Details page-->
     <head>
         <title>Smart Boss</title>
-        <%- include('includes/head.ejs') %>
+        <%- include('./head.ejs') %>
     </head>
     <!--/body-->
     <body>
         <!--/navigation-bars to know more about the company, contact details, cart of the user and the product details of the selected product-->
-        <%- include('includes/nav.ejs') %>
         <main>
             <h3>Skills</h3>
             <% if(skills.length < 1) { %>
