--- a/views/includes/employeeRight.ejs
+++ b/views/includes/employeeRight.ejs
@@ -10,12 +10,14 @@
 
         <main>
             <h3>Hours</h3>
+            <% const dayAvail = ["monAvail","tueAvail", "wedAvail","thAvail", "friAvail","satAvail","sunAvail"]; %>
             <ol>
                 <form action="" method="">
+                <% for(var i = 0; i < 7; i++) {%>
                     <li>
-                        <label for="monAvail">
+                        <label for="<% dayAvail[i] %>Start ">
                             <span>Monday:</span>
-                            <select id="monAvailHours" name="monAvailHours">
+                            <select id="<%dayAvail[i]%>HoursStart" name="<%dayAvail[i]%>HoursStart">
                                 <option value="0">12</option>
                                 <option value="1">1</option>
                                 <option value="2">2</option>
@@ -30,22 +32,19 @@
                                 <option value="11">11:</option>
                             </select>
                             <span>:</span>
-                            <select id="monAvailMinutes" name="monAvailMinutes">
+                            <select id="<%dayAvail[i]%>MinutesStart" name="<%dayAvail[i]%>MinutesStart">
                                 <option value=".00">00</option>
                                 <option value=".15">15</option>
                                 <option value=".30">30</option>
                                 <option value=".45">45</option>
                             </select>
-                            <select id="monAvailHalf" name="monAvailHalf">
+                            <select id="<%dayAvail[i]%>HalfStart" name="<%dayAvail[i]%>HalfStart">
                                 <option value="0">AM</option>
                                 <option value="1">PM</option>
                             </select>
-                        </label>
-                    </li>
-                    <li>
-                        <label for="tueAvail">
-                            <span>Tuesday</span>
-                            <select id="tueAvailHours" name="tueAvailHours">
+                            <h3> TO </h3>
+                            <label for="<%dayAvail[i]%>End">
+                            <select id="<%dayAvail[i]%>HoursEnd" name="<%dayAvail[i]%>HoursEnd">
                                 <option value="0">12</option>
                                 <option value="1">1</option>
                                 <option value="2">2</option>
@@ -60,173 +59,19 @@
                                 <option value="11">11:</option>
                             </select>
                             <span>:</span>
-                            <select id="tueAvailMinutes" name="tueAvailMinutes">
+                            <select id="<%dayAvail[i]%>MinutesEnd" name="<%dayAvail[i]%>MinutesEnd">
                                 <option value=".00">00</option>
                                 <option value=".15">15</option>
                                 <option value=".30">30</option>
                                 <option value=".45">45</option>
                             </select>
-                            <select id="tueAvailHalf" name="tueAvailHalf">
-                                <option value="0">AM</option>
-                                <option value="1">PM</option>
-                            </select>
-                        </label>
-                        </label>
-                    </li>
-                    <li>
-                        <label for="wedAvail">
-                            <span>Wednesday</span>
-                            <select id="wedAvailHours" name="wedAvailHours">
-                                <option value="0">12</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                                <option value="7">7</option>
-                                <option value="8">8:</option>
-                                <option value="9">9:</option>
-                                <option value="10">10</option>
-                                <option value="11">11:</option>
-                            </select>
-                            <span>:</span>
-                            <select id="wedAvailMinutes" name="wedAvailMinutes">
-                                <option value=".00">00</option>
-                                <option value=".15">15</option>
-                                <option value=".30">30</option>
-                                <option value=".45">45</option>
-                            </select>
-                            <select id="wedAvailHalf" name="wedAvailHalf">
-                                <option value="0">AM</option>
-                                <option value="1">PM</option>
-                            </select>
-                        </label>
-                        </label>
-                    </li>
-                    <li>
-                        <label for="thAvail">
-                            <span>Thursday</span>
-    <select id="thAvailHours" name="thAvailHours">
-                                <option value="0">12</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                                <option value="7">7</option>
-                                <option value="8">8:</option>
-                                <option value="9">9:</option>
-                                <option value="10">10</option>
-                                <option value="11">11:</option>
-                            </select>
-                            <span>:</span>
-                            <select id="thAvailMinutes" name="thAvailMinutes">
-                                <option value=".00">00</option>
-                                <option value=".15">15</option>
-                                <option value=".30">30</option>
-                                <option value=".45">45</option>
-                            </select>
-                            <select id="thAvailHalf" name="thAvailHalf">
+                            <select id="<%dayAvail[i]%>HalfEnd" name="<%dayAvail[i]%>HalfEnd">
                                 <option value="0">AM</option>
                                 <option value="1">PM</option>
                             </select>
                         </label>
                     </li>
-                    <li>
-                        <label for="friAvail">
-                            <span>Friday</span>
-    <select id="friAvailHours" name="friAvailHours">
-                                <option value="0">12</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                                <option value="7">7</option>
-                                <option value="8">8:</option>
-                                <option value="9">9:</option>
-                                <option value="10">10</option>
-                                <option value="11">11:</option>
-                            </select>
-                            <span>:</span>
-                            <select id="friAvailMinutes" name="friAvailMinutes">
-                                <option value=".00">00</option>
-                                <option value=".15">15</option>
-                                <option value=".30">30</option>
-                                <option value=".45">45</option>
-                            </select>
-                            <select id="friAvailHalf" name="friAvailHalf">
-                                <option value="0">AM</option>
-                                <option value="1">PM</option>
-                        </select>
-
-                        </label>
-                    </li>
-                    <li>
-                        <label for="satAvail">
-                            <span>Saturday</span>
-                            <select id="satAvailHours" name="satAvailHours">
-                                <option value="0">12</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                                <option value="7">7</option>
-                                <option value="8">8:</option>
-                                <option value="9">9:</option>
-                                <option value="10">10</option>
-                                <option value="11">11:</option>
-                            </select>
-                            <span>:</span>
-                            <select id="satAvailMinutes" name="satAvailMinutes">
-                                <option value=".00">00</option>
-                                <option value=".15">15</option>
-                                <option value=".30">30</option>
-                                <option value=".45">45</option>
-                            </select>
-                            <select id="satAvailHalf" name="satAvailHalf">
-                                <option value="0">AM</option>
-                                <option value="1">PM</option>
-                            </select>
-    
-                        </label>
-                    </li>
-                    <li>
-                        <label for="sunAvail">
-                            <span>Sunday</span>
-                        <select id="sunAvailHours" name="sunAvailHours">
-                                <option value="0">12</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                                <option value="7">7</option>
-                                <option value="8">8:</option>
-                                <option value="9">9:</option>
-                                <option value="10">10</option>
-                                <option value="11">11:</option>
-                            </select>
-                            <span>:</span>
-                            <select id="sunAvailMinutes" name="sunAvailMinutes">
-                                <option value=".00">00</option>
-                                <option value=".15">15</option>
-                                <option value=".30">30</option>
-                                <option value=".45">45</option>
-                            </select>
-                            <select id="sunAvailHalf" name="sunAvailHalf">
-                                <option value="0">AM</option>
-                                <option value="1">PM</option>
-                            </select>
-    
-                        </label>
-                    </li>
+                    <% } %>
                    <button>Update Availability</button> 
                 </form>
             </ol>
