--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -2,3 +2,5 @@
 	<link href="../../resources/style1.css" rel="stylesheet">
     <script src="jquery.js"></script>
 	<script src="../resources/bootstrap.min.js"></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="../../resources/request.js"></script>
