--- a/views/skillPage.ejs
+++ b/views/skillPage.ejs
@@ -9,12 +9,11 @@
         <!--/navigation-bars to know more about the company, contact details, cart of the user and the product details of the selected product-->
         <%- include('includes/nav.ejs') %>
         <main>
-            <h3><input type="text" value="<%=skill.name%>" /></h3>
+            <h3><input type="text" value="<%=skill.name%>" id='name' name='name'/></h3>
             <label for="description">
                 <span>Description:</span>
-                <input type="text" value="<%=skill.description%>" />
+                <input type="text" value="<%=skill.description%>" id='description' name='description'/>
             </label>
-            <form action="">
                 <h5>Monday:</h5>
                 <%- include('includes/shifts.ejs', {day: 0}) %>
                 <h5>Tuesday:</h5>
@@ -29,8 +28,7 @@
                 <%- include('includes/shifts.ejs', {day: 5}) %>
                 <h5>Sunday:</h5>
                 <%- include('includes/shifts.ejs', {day: 6}) %>
-                <button>Update Skill</button>
-            </form>
+                <button onclick='updateSkill()'>Update Skill</button>
         </main>
         <footer id="footer"></footer>
     </body>
