--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -8,6 +8,9 @@
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/help">Help</a></li>
+        <% if(loggedIn == true){ %>
+          <li><a href="/logout">Logout</a></li>
+          <% } %>
       </ul>
     </div>
 </nav>
