some changes need to get all pages from master

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
                 placeholder="Password"
                 required
             />
-            <div class="checkbox mb-3">
+            <div class="radio mb-3">
                 <input type="radio" id="employee" name="logincheck" value="employee" checked />
                 Employee<br />
                 <input type="radio" id="employer" name="logincheck" value="employer" />
