--- a/views/about.ejs
+++ b/views/about.ejs
@@ -14,6 +14,7 @@
   	
  	
 	    		<div class="a">
+                    <img src="../resources/1.jpg" alt="SmartBoss" height="200" width="200">
                         <h2 class="title text-center">About US</h2>
                         <p class="title text-center"> About us
                             SmartBoss was Founded in January 2020 and is based in North Carolina. Smartboss is an app that helps other company’s make their life easy by taking away the stress of schedule and allowing are Smartboss app to do it for you. We are an organization that has developed an app that will change the way scheduling is made forever.</p>
